[package]
name = "rust-config-secrets"
version = "0.1.0"
edition = "2024"
description = "A library for encrypting and decrypting secrets within configuration files."
license = "MIT"
repository = "https://github.com/mshamis85/rust-config-secrets"
documentation = "https://docs.rs/rust-config-secrets"
homepage = "https://github.com/mshamis85/rust-config-secrets"
exclude = ["tests/*", ".gitignore", ".github/*"]
keywords = ["config", "secrets", "encryption", "security", "aes-gcm"]
categories = ["config", "cryptography"]
readme = "README.md"

[dependencies]
aes-gcm = "0.10.3"
rand = "0.8"
clap = { version = "4.5.53", features = ["derive"], optional = true }
bs58 = "0.5.1"

[features]
default = []
cli = ["dep:clap"]

[[bin]]
name = "config-secrets"
path = "src/bin/config-secrets.rs"
required-features = ["cli"]
